--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "axios": "^1.12.2",
+    "cookies-next": "^6.1.1",
     "next": "15.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
